Use arraylist in randomized queue. Use full range when inserting.